--- a/assets/src/scss/main.scss
+++ b/assets/src/scss/main.scss
@@ -1,16 +1,26 @@
-@import './base/reset';
 @import './base/variables';
+@import './base/reset';
 @import './base/typography';
 
+@import './layout/container';
+@import './layout/container-sm';
 @import './layout/footer';
 @import './layout/header';
 @import './layout/logo-nav';
 
 @import './pages/home';
 
+@import './blocks/callout';
+@import './blocks/garnish';
 @import './blocks/hero';
+@import './blocks/quote';
+@import './blocks/scrollby';
+@import './blocks/showcase';
+@import './blocks/split-quote';
+@import './blocks/tri-feature';
 
 @import './components/buttons';
+@import './components/stickers';
 
 
 
