--- a/assets/src/scss/base/_reset.scss
+++ b/assets/src/scss/base/_reset.scss
@@ -6,8 +6,13 @@
     box-sizing: border-box;
 }
 
+html {
+    overflow-x: hidden;
+}
+
 body {
-    background-color: #f4f4f4;
-    color: #333;
+    background-color: $color-white;
+    color: $color-black;
     position: relative;
+    overflow-x: hidden;
 }
