--- a/assets/src/scss/base/_typography.scss
+++ b/assets/src/scss/base/_typography.scss
@@ -1,1 +1,23 @@
+h1 {
+    font-size: 80px;
+    letter-spacing: 4px;
+} 
 
+h2 {
+    font-size: 50px;
+    letter-spacing: 1px;
+    margin-bottom: 20px;
+}
+
+p {
+    font-size: 24px;
+    letter-spacing: 1px;
+    margin-bottom: 20px;
+    line-height: 1.2;
+}
+
+small {
+    font-size: 13px;
+    letter-spacing: 1px;
+    display: block;
+}
